This commit marks a substantial overhaul of the Im ageStitcher v1.2 codebase, transitioning it into aclass-based system. Key improvements include: 1. Refactored 'ImageStitcher' into a class to enhance readability, maintainability, and scalability. 2. Added a constructor accepting DOM elements as parameters, enhancing flexibility. 3. Included a configuration object to the constructor for future instantiation flexibility. 4. Consolidated image stitching functionalities within the 'ImageStitcher' class, utilizing 'this' to access class properties. 5. Simplified event listener setup for DOMContentLoaded. 6. Optimized event handling for drag and drop and click interactions. 7. Removed 'onclick' attributes from the reset button in the HTML file, replaced with unique IDs. 8. Eliminated the "Combine Image" button, as images were now automatically combined upon upload. 9. Modularized download link setup to streamline logic and ensure single responsibility per function. 10. Centralized element selectors at the beginning for improved readability and maintenance. 11. Refactored combineImages to eliminate global variables and enhance readability. 12. Utilized Array.from for cleaner iteration over FileList. 13. Separated renderImages for enhanced code clarity, reusing loadedImages from combineImages scope. 14. Implemented robust error handling and user feedback mechanisms. 15. Pre-loaded image file type validation to ensure compatibility before processing. 16. Efficiently managed memory through the timely release of object URLs. 17. Adopted Promises for asynchronous image loading operations, enhancing manageability. 18. Introduced 'loadImage' utility method for Promise-based image loading. 19. Integrated 'calculateMaxWidth' and 'calculateTotalHeight' methods for further code modularization. In summary, this major refactor is to prioritize scalability and mangeability for future feature expansions.

--- a/css/style.css
+++ b/css/style.css
@@ -41,24 +41,6 @@ button:hover {
     background-color: #0056b3;
 }
 
-.progress-container {
-    width: 100%;
-    background-color: #eee;
-    margin: 20px 0;
-    height: 20px;
-    border-radius: 5px;
-}
-
-.progress-bar {
-    height: 100%;
-    background-color: #007bff;
-    width: 0%; /* Initial width */
-    border-radius: 5px;
-    text-align: center;
-    color: white;
-    line-height: 20px; /* To center text vertically */
-}
-
 #canvas {
     border: 0px solid #000;
     margin-top: 20px;
@@ -66,6 +48,7 @@ button:hover {
 
 #downloadLink {
     display: block; /* Adjust based on when you want to show it */
+    margin-top; 10px;
     margin-bottom: 10px; /* Adds space below the Download button */
     text-decoration: none;
     color: #007bff;
